# langchain_tutorial

./: README.md  docker-compose.yml  pyproject.toml
src/Functions, Tools and Agents with LangChain/: 1 - OpenAI Function Calling.ipynb
