[tool.poetry]
name = "langchain_tutorial"
version = "0.1.0"
description = ""
authors = ["alchemine <alchemine@bereview.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "6.5.6"
jupyterthemes = "0.20.0"
langchain = "^0.1.4"
langchain-openai = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
